Fixed main things

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,20 +1,22 @@
 ---
 type: page
 title: About
-date: 2021-03-19
+date: 2022-10-06
 ---
 
-# Your Name
+# Kendry Grullon
 
-Hey, I'm a Senior Software Engineer at Company. I enjoy working with Next.js and crafting beautiful front-end experiences.
+Hey, I'm a Lead Software Engineer at [X-Team](https://x-team.com/).
+I enjoy mathematics, mechanics, generative coding and puzzles in general.
 
-This portfolio is built with **Next.js** and a library called [Nextra](https://nextra.vercel.app/). It allows you to write Markdown and focus on the _content_ of your portfolio.
+Trying to achieve my goals by putting my thoughts into words.
 
-[**Deploy your own**](https://vercel.com/new/git/external?repository-url=https://github.com/vercel-solutions/nextjs-portfolio-starter&project-name=portfolio&repository-name=portfolio) in a few minutes.
+Writing in spanish.
 
 ---
 
-- Twitter [@yourname](https://twitter.com/yourname)
-- GitHub [@yourname](https://github.com/yourname)
-- Instagram [@yourname](https://instagram.com/yourname)
-- Email your@name.com
+- [Twitter](https://twitter.com/kxngru)
+- [GitHub](https://github.com/kengru)
+- [LinkedIn](https://www.linkedin.com/in/kengru/)
+- [Instagram](https://instagram.com/kengru)
+- Email kengrullon@gmail.com
