--- a/pages/frequents/1.md
+++ b/pages/frequents/1.md
@@ -28,7 +28,7 @@ Mientras estaba en [Tofogu](https://www.tofugu.com/learn-japanese/) empezando a 
 me topé con este artículo: [There's no speed limit](https://sive.rs/kimo) y me pareció muy 
 interesante porque creo que la mayoría de mis avances en cualquier término viene de no tener
 un paso fijo al momento de dedicarme a estudiar sobre algo y simplemente arroparme de ello
-por muchas tiempo. Cita relevante:
+por mucho tiempo. Cita relevante:
 
 > If you’re more driven than most people, you can do way more than anyone expects
 
