--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -6,12 +6,12 @@ date: 2022-10-06
 
 # Kendry Grullon
 
-Hey, I'm a Lead Software Engineer at [X-Team](https://x-team.com/).
+Hey, I work as a Lead Software Engineer at [X-Team](https://x-team.com/).
 I enjoy mathematics, mechanics, generative coding and puzzles in general.
 
 Trying to achieve my goals by putting my thoughts into words.
 
-Writing in spanish.
+Writing in Spanish.
 
 ---
 
