--- a/pages/frequents/7.md
+++ b/pages/frequents/7.md
@@ -1,7 +1,7 @@
 ---
 title: Viernes 21/10/2022
 date: 2022/10/21
-description: Insesante.
+description: Retomando arte.
 tag: frequents
 author: Kendry
 ---
