--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -19,4 +19,4 @@ Writing in Spanish.
 - [GitHub](https://github.com/kengru)
 - [LinkedIn](https://www.linkedin.com/in/kengru/)
 - [Instagram](https://instagram.com/kengru)
-- Email kengrullon@gmail.com
+- Email: kengrullon@gmail.com
