Improved a bit and changed the favicon.

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -11,12 +11,15 @@ I enjoy mathematics, mechanics, generative coding and puzzles in general.
 
 Trying to achieve my goals by putting my thoughts into words.
 
-Writing in Spanish.
+Writing in Spanish. |
+kengrullon@gmail.com
 
 ---
 
-- [Twitter](https://twitter.com/kxngru)
-- [GitHub](https://github.com/kengru)
-- [LinkedIn](https://www.linkedin.com/in/kengru/)
-- [Instagram](https://instagram.com/kengru)
-- Email: kengrullon@gmail.com
+#### [Twitter](https://twitter.com/kxngru)
+
+#### [GitHub](https://github.com/kengru)
+
+#### [LinkedIn](https://www.linkedin.com/in/kengru/)
+
+#### [Instagram](https://instagram.com/kengru)
