Figured out how to fix the english menu.

--- a/content/es/frequents/003.md
+++ b/content/es/frequents/003.md
@@ -22,7 +22,7 @@ unos minutos.
 
 ## Desarrollo
 
-La applicación para memorizar jápones funciona en teoría, en práctica aun falta llenar toda
+La applicación para memorizar japones funciona en teoría, en práctica aun falta llenar toda
 la data que necesitaría y ponerla bonita, por ahora se puede hacer más o menos algo acá:
 [JPractice](https://jp.kengru.do).
 
