--- a/content/en/devlogs/rust/001.md
+++ b/content/en/devlogs/rust/001.md
@@ -1,23 +1,49 @@
 +++
 author = "Kendry"
-title = "Learning Rust pt.1"
+title = "Learning Rust - The Beginning"
 date = "2023-03-15"
-description = "Understanding the beast."
+description = "Approach and motives."
 tags = [
     "devlog",
 ]
 toc = false
 +++
 
-## Learning Rust pt. 1
+## Learning Rust - The Beginning
 
-Hoy fue un día de mucha reflexión. Son días como estos que me mantienenfsfji
-dsfasd
-fsadf
-asdf
-sad
-f
+I started the [Rust Programming Language book](https://rust-book.cs.brown.edu/title-page.html)
+a couple of days ago, or at least started to get serious with it. The plan is to
+create the desktop app I've been wanting to create for a while now. After checking
+up into a lot of alternatives including [Flutter Desktop](https://flutter.dev/multi-platform/desktop) and [Electron](https://www.electronjs.org/) I decided I wanted to
+try something new and challenging, so I choose Rust.
 
-asdfasdf
+It is true that it would have been a lot easier for me to create it using
+Electron since I have a lot of experience with React but I'm at a point of my
+live where I need to challenge myself in order to stay in my feet. And what
+better than learning a high-level language that worries about pointers :sweat_smile:.
 
-# wsd
+I expect a lot of re-reading, confusion, googling, and difficulty while embarking
+in this journey. It has been quite a few years since I've used anything other than
+javascript, python or flutter, needless to say that memory allocation is not
+a big concern in the practical applications of those.
+
+## Moti
+
+Moti will be a desktop app where I can centralize some of the things I
+presently use for productivity and plan to use in the future. Some features include:
+
+- Mood tracker to understand a little bit more about my emotional patterns.
+- Daily survey to keep track of things like motivation, things worked on, etc.
+- Statistics for all the mentioned above.
+- Scripts for tasks I need to do sometimes like joining some frames to create
+  a [gif](https://twitter.com/kxngru/status/1584727757736398848).
+- I have a list of motivational videos that actually give me a boost, so
+  according what I think I'll need for the day, I will play one of these! (It
+  baffles me how excited I am for this feature).
+- Could possibly add some finance handling.
+- Visualization of the state of servers/pages.
+
+I will start a new devlog section for the development of this as soon as I
+am a bit further ahead in the Rust book and actually start the project itself.
+
+Until next time, where I will probably be overwhelm by what I learn.
