Almost done with the second Rust devlog.

--- a/content/es/frequents/014.md
+++ b/content/es/frequents/014.md
@@ -2,7 +2,7 @@
 author = "Kendry"
 title = "014"
 date = "2023-03-15"
-description = "."
+description = "Tiempo de luchar."
 tags = [
     "frequents",
 ]
