Finished the second Rust article.

--- a/content/en/devlogs/rust/002.md
+++ b/content/en/devlogs/rust/002.md
@@ -11,8 +11,6 @@ toc = false
 
 ## Rust
 
-Rust
-
 The first thing that got my attention was [Cargo](https://doc.rust-lang.org/cargo/)
 which is Rust's package manager and build system. It's pretty easy to
 use and it comes overcharged right out of the gate with a way
@@ -45,9 +43,30 @@ and `forEach` to run throught a whole array and return the array,
 and also `reduce` so we could get a single value, but this is
 like you could assign a for to a variable. And it looks like this:
 
+![a variable being assigned the returning value of a loop](/posts/rust/ex1-3.png)
+
 ## Ownership
 
 Here is where it starts to get difficult.
+
+Rust's compiler handles a concept called [Ownership](https://rust-book.cs.brown.edu/ch04-01-what-is-ownership.html).
+Ownership is the way Rust ensures the code is "safe", by safe it
+means that the code is not doing anything that could cause undefined
+behaviour, things like using memory that has already been freed or
+freeing memory before its use.
+
+To figure out how to write safe code you have to do some [mental
+gymnastics](https://tenor.com/view/michael-scott-flip-couch-parkour-the-office-gif-8710113)
+about which variable has write, read or ownership of data in the
+[heap](<https://en.wikipedia.org/wiki/Heap_(data_structure)>). It
+is difficult for me since I've been working with javascript for years
+now without having to worry about memory allocation, but it's part
+of why I wanted to learn Rust in the first place.
+
+At the end of the day, understanding pointers, memory allocation,
+and data structures is benefitial to me. Those are foundations that
+in a way I skipped by not finishing college and not actually needing
+them in my day to day writing React code.
 
 ## Compiler
 
@@ -55,7 +74,9 @@ Rust's compiler is a time saver, even though there is a learning
 curve in dealing with errors just as you write them without
 them being blatanly obvious, like a syntax error or a type
 error, Rust's compiler catches the strangest of bugs that could
-happen in the future. This comes to the expense of
+happen in the future. This comes at the expense of having to
+carefully detail and think about the consequences the code you are
+writing could have.
 
-Which I believe is a great tradeoff for what the type safety you
-are getting.
+Which I believe is a great tradeoff for the memory safe and secure
+code you are getting.
