Added the fourth devlog from Rust.

--- a/content/en/devlogs/rust/001.md
+++ b/content/en/devlogs/rust/001.md
@@ -4,7 +4,7 @@ title = "Learning Rust - The Beginning"
 date = "2023-03-15"
 description = "Approach and motives."
 tags = [
-    "devlog",
+    "devlog", "rust"
 ]
 toc = false
 +++
