--- a/content/en/devlogs/rust/002.md
+++ b/content/en/devlogs/rust/002.md
@@ -4,7 +4,7 @@ title = "Learning Rust - Ownership"
 date = "2023-03-16"
 description = "Ownership and an initial Rust review."
 tags = [
-    "devlog",
+    "devlog", "rust"
 ]
 toc = false
 +++
