--- a/content/en/devlogs/rust/003.md
+++ b/content/en/devlogs/rust/003.md
@@ -4,7 +4,7 @@ title = "Learning Rust - Structs & Collections"
 date = "2023-03-18"
 description = "Understanding collections and structs."
 tags = [
-    "devlog",
+    "devlog", "rust"
 ]
 toc = false
 +++
