Continued working on 005.

--- a/content/en/devlogs/rust/005.md
+++ b/content/en/devlogs/rust/005.md
@@ -52,3 +52,45 @@ necessarily the best function to make since this could also be done
 in place.
 
 ## Publishing and Workspaces
+
+In this chapter of the book we learn how to optimize your build by
+specifying the amount of optimizations the rust compiler should make
+when compiling your code in production or development. This is done
+by writing down on the specific profile part in the `Cargo.toml` file.
+Since the optimizations are done in compiling time this does not affect
+the final product in terms of speed of starting the program.
+
+`///` is used to document functions or any part of the code.
+
+If you have documentation in your code, structs, functions or any kind
+of type, you can open a documentation page with all of your writings by
+writing `cargo doc --open`. The files for that page will be on the folder
+called `target/doc`. If you write an example in the documentation of the
+code it will also be counted as a test when running `cargo test`.
+
+Workspaces are used when you have to manage multiple packages for a same
+project, for example, having two libraries and one binary. When on a workspace,
+all the libraries will output the compiled artifacts on the parent's
+`target` directory.
+
+## Smart Pointers
+
+Rust has some _smart pointers_ options, a smart pointer is a pointer that
+can do more that the basic capability of pointing to a place in the stack.
+For example, `String` and `Vec<T>` are both smart pointers, besides the
+reference they have on the heap, they also contain metadata about the value.
+One main diference between those smart pointers and a simple reference is that
+these pointers own the value in the heap instead of just being borrowed.
+
+A smart pointer often used is the `Box<T>`, this allows to save any type/value
+in the heap instead of the stack, a great use for this is moving data from
+a variable to another and transfer just the ownership of the place in the stack
+instead of copying the data over.
+
+There are two traits that create a smart pointers which are `Deref` and `Drop`.
+
+- `Deref` is the trait that allows a struct to be dereferenced, this uses the
+  deref operator `*`. The deref trait needs a function called `deref` to be implemented
+  which tells Rust how will that instance be treated when trying to dereference it.
+- `Drop` is a kind of destructor, when implemented it lets Rust knows how to deal
+  with the instance/value when it's being dropped.
