--- a/content/en/devlogs/rust/005.md
+++ b/content/en/devlogs/rust/005.md
@@ -94,3 +94,50 @@ There are two traits that create a smart pointers which are `Deref` and `Drop`.
   which tells Rust how will that instance be treated when trying to dereference it.
 - `Drop` is a kind of destructor, when implemented it lets Rust knows how to deal
   with the instance/value when it's being dropped.
+
+### More Pointers
+
+`Rc<T>` stands for reference counting. This _smart pointer_ keeps track
+of the number of references to the value in the heap its pointing to determine
+if the value is still in use. This is meant to allocate some data on the heap
+and keep the value on it even if we have multiple references of it and some
+can get dropped.
+
+We do so by calling `Rc::clone()` on a reference and this increments the reference
+count of that value and returns another reference. (immutable)
+
+### RefCell<T>
+
+`RefCell<T>` allows mutable borrows checked at runtime, you can mutate the
+value inside the RefCell<T> even when the RefCell<T> is immutable.
+
+This can be done with `unsafe` code but wrapped by the Rust team in a safe API.
+
+## Concurrency
+
+The last topic of this batch is concurrency, achieving concurrency in Rust seems
+pretty straigthforward, it's just a matter of calling `thread::spawn()` with a
+function and a new thread will handle it. Mastering concurrency is just a whole
+other thing, there are a lot of things related to ownership that we need to keep
+in mind.
+
+Threads do not take ownership of the scope where they are created unless specified
+by using the `move` keyword. And when they do so we need to take into consideration
+how the whole flow of dropping the value passed will happen, for example, if you
+use `move` to then change an array inside of a thread, the ownership will be lost
+at the end and the previous variable that holded the array will be dropped and
+unusable.
+
+Communication between threads is achieved by using one of these two methods: Messaging
+or `Mutex<T>`. Here are examples of using both:
+
+#### Messaging
+
+![recieving values from a thread and printing them](/posts/rust/ex5-3.png)
+
+#### Mutex and Arc
+
+![mutating values of a vec inside of a thread and using it outside](/posts/rust/ex5-4.png)
+
+Next up we have the last stretch! It has been fun and very challenging so far
+and that was the whole point of doing it!
