Fixed typo on rust devlog.
Signed-off-by: Kendry Grullon <kengrullon@gmail.com>

--- a/content/en/devlogs/rust/006.md
+++ b/content/en/devlogs/rust/006.md
@@ -2,7 +2,7 @@
 author = "Kendry"
 title = "Learning Rust - Final"
 date = "2023-04-28"
-description = "."
+description = "OOP, Patterns and last words."
 tags = [
     "devlog", "rust"
 ]
