Fixing route on images.

--- a/src/content/blog/005.md
+++ b/src/content/blog/005.md
@@ -45,7 +45,7 @@ this is useful when using an _iterator adaptor_ since what you
 get back from them are other iterators after your closure has
 done the job. An example of this could be:
 
-![function that iterates over an integer vector and adds one](@assets/images/ex5-2.png)
+![function that iterates over an integer vector and adds one](@assets/images/rust/ex5-2.png)
 
 This function takes a reference to an integer vector, turns it into
 an iterator, maps the values to add one into a new iterator and then
@@ -139,7 +139,7 @@ or `Mutex<T>`. Here are examples of using both:
 
 #### Mutex and Arc
 
-![mutating values of a vec inside of a thread and using it outside](@assets/images/ex5-4.png)
+![mutating values of a vec inside of a thread and using it outside](@assets/images/rust/ex5-4.png)
 
 Next up we have the last stretch! It has been fun and very challenging so far
 and that was the whole point of doing it!
